--- a/index.html
+++ b/index.html
@@ -18,95 +18,210 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg py-4">
-        <div class="container">
-            <a class="navbar-brand fs-1 fw-bold" href="#">edu.Care</a>
-            <button class="btn btn-outline-info fw-semibold px-4 py-2 ms-auto register-btn">Register</button>
-            <button class="navbar-toggler border-0 " type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0 gap-4">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Courses</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Deals</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Success</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
-                    </li>
-                </ul>
-                <button class="btn btn-outline-info fw-semibold px-4 py-2 register-btn-2">Register</button>
-            </div>
-        </div>
-    </nav>
+    <header>
 
-    <!-- Slider starts -->
+        <!-- navbar starts -->
 
-    <section class="container">
-        <div id="carouselExampleCaptions" class="carousel slide">
-            <div class="carousel-inner rounded">
-                <div class="carousel-item active">
-                    <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-md-block">
-                        <div class="carousel-content">
-                            <h5 class="fw-semibold">Get Started Digital Learning</h5>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of
-                                a page when looking at its layout.</p>
-                            <button class="btn btn-info fw-semibold text-white border-0">Get Started</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-md-block">
-                        <div class="carousel-content">
-                            <h5 class="fw-semibold">Get Started Digital Learning</h5>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of
-                                a page when looking at its layout.</p>
-                            <button class="btn btn-info fw-semibold text-white border-0">Get Started</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-md-block">
-                        <div class="carousel-content">
-                            <h5 class="fw-semibold">Get Started Digital Learning</h5>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of
-                                a page when looking at its layout.</p>
-                            <button class="btn btn-info fw-semibold text-white border-0">Get Started</button>
-                        </div>
-                    </div>
+        <nav class="navbar navbar-expand-lg py-4">
+            <div class="container">
+                <a class="navbar-brand fs-1 fw-bold" href="#">edu.Care</a>
+                <button class="btn btn-outline-info fw-semibold px-4 py-2 ms-auto register-btn">Register</button>
+                <button class="navbar-toggler border-0 " type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0 gap-4">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Deals</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Success</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Register</a>
+                        </li>
+                    </ul>
+                    <button class="btn btn-outline-info fw-semibold px-4 py-2 register-btn-2">Register</button>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </section>
+        </nav>
 
-    <!-- Slider ends -->
+        <!-- navbar ends -->
 
+        <!-- Slider starts -->
+
+        <section class="container">
+            <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-inner rounded">
+                    <div class="carousel-item active">
+                        <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <div class="carousel-content">
+                                <h5 class="fw-semibold">Get Started Digital Learning</h5>
+                                <p>It is a long established fact that a reader will be distracted by the readable
+                                    content of
+                                    a page when looking at its layout.</p>
+                                <button class="btn btn-info fw-semibold text-white border-0">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <div class="carousel-content">
+                                <h5 class="fw-semibold">Get Started Digital Learning</h5>
+                                <p>It is a long established fact that a reader will be distracted by the readable
+                                    content of
+                                    a page when looking at its layout.</p>
+                                <button class="btn btn-info fw-semibold text-white border-0">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <div class="carousel-content">
+                                <h5 class="fw-semibold">Get Started Digital Learning</h5>
+                                <p>It is a long established fact that a reader will be distracted by the readable
+                                    content of
+                                    a page when looking at its layout.</p>
+                                <button class="btn btn-info fw-semibold text-white border-0">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+        <!-- Slider ends -->
+    </header>
+    <main>
+
+        <!-- popular courses starts -->
+
+        <section class="container">
+            <h1 class="text-center course-header fw-bold fs-1 pb-3">Discover Our Popular<br> Courses</h1>
+            <p class="text-center pb-5">It is a long established fact that a reader will be distracted by the
+                readable<br> content of a page when looking at its layout.
+            </p>
+            <div class="cards d-flex flex-wrap justify-content-between row-gap-3 ">
+                <div class="card mb-3 rounded-3 course-card">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-md-4">
+                            <img src="./images/course/course-1.png" class="img-fluid rounded-start card-img" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-semibold ">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card.</p>
+                                <p class="card-text text-info fw-semibold price">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 rounded-3 course-card">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-md-4">
+                            <img src="./images/course/course-2.png" class="img-fluid rounded-start card-img" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title semibold">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card.</p>
+                                <p class="card-text text-info fw-semibold price">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 rounded-3 course-card">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-md-4">
+                            <img src="./images/course/course-3.png" class="img-fluid rounded-start card-img" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title semibold">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card.</p>
+                                <p class="card-text text-info fw-semibold price">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 rounded-3 course-card">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-md-4">
+                            <img src="./images/course/course-4.png" class="img-fluid rounded-start card-img" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title semibold">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card.</p>
+                                <p class="card-text text-info fw-semibold price">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 rounded-3 course-card">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-md-4">
+                            <img src="./images/course/course-5.png" class="img-fluid rounded-start card-img" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title semibold">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card.</p>
+                                <p class="card-text text-info fw-semibold price">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 rounded-3 course-card">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-md-4">
+                            <img src="./images/course/course-6.png" class="img-fluid rounded-start card-img" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title semibold">Fundamental Of UI/UX Design</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card.</p>
+                                <p class="card-text text-info fw-semibold price">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-primary fw-semibold  px-4 py-3 d-block mx-auto mt-3">See More Courses</button>
+        </section>
+
+        <!-- popular courses ends -->
+    </main>
     <!-- Bootstrap JS link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
