--- a/index.html
+++ b/index.html
@@ -221,6 +221,44 @@
         </section>
 
         <!-- popular courses ends -->
+
+        <!-- eLarning institute starts -->
+
+        <section class="container">
+            <div class="elearning d-flex flex-wrap align-items-center rounded">
+                <div class="elearning-img">
+                    <img class="img-fluid" src="./images/working.png" alt="">
+                </div>
+                <div class="elearning-content p-4">
+                    <h1 class="fw-bold pb-3 ">Explore The elearning Institute</h1>
+                    <p class="ellipsis-text">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or
+                        randomised wordswhich don't look even slightly believable. If you are going
+                        to use a passage of Lorem Ipsum, you need to be sure.
+                    </p>
+                    <p class="d-none d-lg-block ">Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                        generators on the Internet tend to repeat predefined.
+                    </p>
+                    <div class="statistics pt-2">
+                        <div>
+                            <h1 class="fw-bold">3.2K+</h1>
+                            <p>Online Course</p>
+                        </div>
+                        <div>
+                            <h1 class="fw-bold">600K+</h1>
+                            <p>Exper Member</p>
+                        </div>
+                        <div>
+                            <h1 class="fw-bold">1K+</h1>
+                            <p>Rating & Review</p>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary fw-semibold  px-4 py-2 d-block mt-3">Read More</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- eLarning institute ends -->
     </main>
     <!-- Bootstrap JS link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
