--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
                         randomised wordswhich don't look even slightly believable. If you are going
                         to use a passage of Lorem Ipsum, you need to be sure.
                     </p>
-                    <p class="d-none d-lg-block ">Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                    <p class="d-none d-lg-block ">Anything embarrassing hidden in the middle of text. All the Lorem
+                        Ipsum
                         generators on the Internet tend to repeat predefined.
                     </p>
                     <div class="statistics pt-2">
@@ -259,6 +260,24 @@
         </section>
 
         <!-- eLarning institute ends -->
+
+        <!-- ready to join starts -->
+
+        <section class="container mt-5 ">
+            <div class="ready-to-join text-white d-flex flex-wrap justify-content-around  align-items-center p-5 rounded ">
+                <div class="join-content">
+                    <h1>Ready to join?</h1>
+                    <p>It is a long established fact that a reader will be distracted by the.<br>
+                        readable content of a page when looking at its layout.
+                    </p>
+                </div>
+                <div class="join-reg-btn d-inline-block rounded">
+                    <button class="btn btn-info fw-bold px-4 py-3">Register Now</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- ready to join ends -->
     </main>
     <!-- Bootstrap JS link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
