--- a/index.html
+++ b/index.html
@@ -278,6 +278,56 @@
         </section>
 
         <!-- ready to join ends -->
+
+        <!-- successfull students starts -->
+
+         <section class="container mt-5">
+            <h1 class="fw-bold text-center pt-5 pb-3 ">Meet Our Successfull <br> Students</h1>
+            <p class="text-center pb-4 ">It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout.
+            </p>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+                <div class="col">
+                  <div class="card h-100 student-card">
+                    <img src="./images/student/student-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Awlad Hossain</h5>
+                      <p class="card-text">UI UX Designer</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 student-card">
+                    <img src="./images/student/student-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Jannatul Islam</h5>
+                      <p class="card-text">Motion Designer</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 student-card">
+                    <img src="./images/student/student-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Imran Hossain</h5>
+                      <p class="card-text">Graphic Designer</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 student-card">
+                    <img src="./images/student/student-4.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Nishi Akter</h5>
+                      <p class="card-text">Web Developer</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <button class="btn btn-primary fw-semibold  px-4 py-2 d-block mt-5 mx-auto ">View All</button>
+         </section>   
+
+        <!-- successfull students ends -->
+
     </main>
     <!-- Bootstrap JS link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
