--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <!-- Font Awesome link -->
+    <script src="https://kit.fontawesome.com/ddc94e5353.js" crossorigin="anonymous"></script>    
     <!-- Custom CSS link -->
     <link rel="stylesheet" href="./styles/style.css">
 </head>
@@ -323,10 +325,71 @@
                   </div>
                 </div>
               </div>
-              <button class="btn btn-primary fw-semibold  px-4 py-2 d-block mt-5 mx-auto ">View All</button>
+              <button class="btn btn-primary fw-semibold  px-4 py-2 d-block mt-4 mx-auto ">View All</button>
          </section>   
 
         <!-- successfull students ends -->
+
+        <!-- students feedback starts -->
+
+         <section class="container mt-5">
+            <h1 class="fw-bold text-center pt-5 pb-3 ">Some Students Feedback</h1>
+            <p class="text-center pb-4 ">It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout.
+            </p>
+            <div class="d-flex gap-3 feedback">
+                <div class="border rounded p-4">
+                    <div class="d-flex justify-content-between align-items-center  comma-img">
+                        <img src="./images/comma.png" alt="">
+                        <p>
+                            <i class="fa-solid fa-star text-warning "></i>
+                            <i class="fa-solid fa-star text-warning "></i>
+                            <i class="fa-solid fa-star text-warning "></i>
+                            <i class="fa-solid fa-star text-warning "></i>
+                            <i class="fa-regular fa-star text-warning "></i>
+                        </p>
+                    </div>
+                    <p class="pt-4">There are many variations of passages of Lorem Ipsum available, but 
+                        the majority have suffered alteration in some form, by injected 
+                        humour, or randomised words which don't look even slightly 
+                        believable. If you are going to use a passage of Lorem.
+                    </p>
+                    <div class="d-flex gap-3  align-items-start  ">
+                        <img src="./images/student/student-5.png" width="55px" height="55px" alt="">
+                        <div>
+                            <h5 class="fw-semibold ">Awlad Hossain</h5>
+                            <p>UI Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="border rounded p-4">
+                    <div class="d-flex justify-content-between align-items-center  comma-img">
+                        <img src="./images/comma.png" alt="">
+                        <p>
+                            <i class="fa-solid fa-star text-warning "></i>
+                            <i class="fa-solid fa-star text-warning "></i>
+                            <i class="fa-solid fa-star text-warning "></i>
+                            <i class="fa-solid fa-star text-warning "></i>
+                            <i class="fa-regular fa-star text-warning "></i>
+                        </p>
+                    </div>
+                    <p class="pt-4">There are many variations of passages of Lorem Ipsum available, but 
+                        the majority have suffered alteration in some form, by injected 
+                        humour, or randomised words which don't look even slightly 
+                        believable. If you are going to use a passage of Lorem.
+                    </p>
+                    <div class="d-flex gap-3  align-items-start ">
+                        <img src="./images/student/student-6.png" width="55px" height="55px" alt="">
+                        <div>
+                            <h5 class="fw-semibold">Santa Akter</h5>
+                            <p>Graphic Designer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-primary fw-semibold  px-4 py-2 d-block mt-4 mx-auto ">View All</button>
+         </section>
+
+        <!-- students feedback ends -->
 
     </main>
     <!-- Bootstrap JS link -->
