trusted companies done

--- a/index.html
+++ b/index.html
@@ -438,6 +438,22 @@
 
         <!-- FAQ ends -->
 
+        <!-- trusted companies starts -->
+
+        <section class="container mt-5">
+            <h1 class="fw-bold text-center pt-5 pb-3">Trusted by over 800+ companies</h1>
+            <div class="d-flex justify-content-around companies">
+                <img src="./images/company/company-1.png" alt="">
+                <img src="./images/company/company-2.png" alt="">
+                <img src="./images/company/company-3.png" alt="">
+                <img src="./images/company/company-4.png" alt="">
+                <img src="./images/company/company-5.png" alt="">
+                <img src="./images/company/company-6.png" alt="">
+            </div>
+        </section>
+
+        <!-- trusted companies ends -->
+
     </main>
     <!-- Bootstrap JS link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
