trusted companies completed

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
         <!-- trusted companies starts -->
 
-        <section class="container mt-5">
+        <section class="container mt-5 trusted-companies">
             <h1 class="fw-bold text-center pt-5 pb-3">Trusted by over 800+ companies</h1>
             <div class="d-flex justify-content-around companies">
                 <img src="./images/company/company-1.png" alt="">
