--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 <h5 class="card-title fw-semibold ">Fundamental Of UI/UX Design</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card.</p>
-                                <p class="card-text text-info fw-semibold price">Price : 20$</p>
+                                <p class="fw-semibold price">Price : 20$</p>
                             </div>
                         </div>
                     </div>
@@ -150,10 +150,10 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title semibold">Fundamental Of UI/UX Design</h5>
+                                <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card.</p>
-                                <p class="card-text text-info fw-semibold price">Price : 20$</p>
+                                <p class="fw-semibold price">Price : 20$</p>
                             </div>
                         </div>
                     </div>
@@ -165,10 +165,10 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title semibold">Fundamental Of UI/UX Design</h5>
+                                <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card.</p>
-                                <p class="card-text text-info fw-semibold price">Price : 20$</p>
+                                <p class="fw-semibold price">Price : 20$</p>
                             </div>
                         </div>
                     </div>
@@ -180,10 +180,10 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title semibold">Fundamental Of UI/UX Design</h5>
+                                <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card.</p>
-                                <p class="card-text text-info fw-semibold price">Price : 20$</p>
+                                <p class="fw-semibold price">Price : 20$</p>
                             </div>
                         </div>
                     </div>
@@ -195,10 +195,10 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title semibold">Fundamental Of UI/UX Design</h5>
+                                <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card.</p>
-                                <p class="card-text text-info fw-semibold price">Price : 20$</p>
+                                <p class="fw-semibold price">Price : 20$</p>
                             </div>
                         </div>
                     </div>
@@ -210,10 +210,10 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title semibold">Fundamental Of UI/UX Design</h5>
+                                <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card.</p>
-                                <p class="card-text text-info fw-semibold price">Price : 20$</p>
+                                <p class="fw-semibold price">Price : 20$</p>
                             </div>
                         </div>
                     </div>
@@ -453,6 +453,22 @@
         </section>
 
         <!-- trusted companies ends -->
+
+        <footer class="bg-black text-white text-center mt-5">
+            <section class="container pt-4">
+                <h1 class="fw-semibold text-center pt-5 pb-3">edu.Care</h1>
+                <p>Office 41, Zawaya Buildin, Ghala Muscat,<br>
+                    Sultanate of Oman<br>
+                    Privacy Ploicy | Terms of use
+                </p>
+                <div class="social-icons d-flex justify-content-center gap-3 pb-5">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
+                    <i class="fa-brands fa-tiktok"></i>
+                </div>
+            </section>
+        </footer>
 
     </main>
     <!-- Bootstrap JS link -->
