--- a/index.html
+++ b/index.html
@@ -454,23 +454,23 @@
 
         <!-- trusted companies ends -->
 
-        <footer class="bg-black text-white text-center mt-5">
-            <section class="container pt-4">
-                <h1 class="fw-semibold text-center pt-5 pb-3">edu.Care</h1>
-                <p>Office 41, Zawaya Buildin, Ghala Muscat,<br>
-                    Sultanate of Oman<br>
-                    Privacy Ploicy | Terms of use
-                </p>
-                <div class="social-icons d-flex justify-content-center gap-3 pb-5">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-linkedin-in"></i>
-                    <i class="fa-brands fa-tiktok"></i>
-                </div>
-            </section>
-        </footer>
-
     </main>
+    <footer class="bg-black text-white mt-5">
+        <section class="container text-center py-4">
+            <h1 class="fw-semibold pt-5 pb-3">edu.Care</h1>
+            <p>Office 41, Zawaya Buildin, Ghala Muscat,<br>
+                Sultanate of Oman<br>
+                Privacy Ploicy | Terms of use
+            </p>
+            <div class="social-icons d-flex justify-content-center gap-3 pb-5">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+                <i class="fa-brands fa-tiktok"></i>
+            </div>
+        </section>
+    </footer>
+
     <!-- Bootstrap JS link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
