bonus part done

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Understood</button>
+                                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Understood</button>
                                 </div>
                             </div>
                         </div>
@@ -429,17 +429,12 @@
                         <button class="accordion-button fw-semibold " type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                             aria-controls="panelsStayOpen-collapseOne">
-                            Accordion Item #1
+                            What are the differences between Flexbox and Grid?
                         </button>
                     </h2>
                     <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
                         <div class="accordion-body">
-                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            The basic difference between CSS Grid and CSS flexbox layout is that flexbox is designed for layout in one dimension - either a row or a column. Grid is designed for two-dimensional layout - rows, and columns at the same time.
                         </div>
                     </div>
                 </div>
@@ -448,17 +443,12 @@
                         <button class="accordion-button collapsed fw-semibold" type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                             aria-controls="panelsStayOpen-collapseTwo">
-                            Accordion Item #2
+                            What are the differences between Bootstrap and Tailwind?
                         </button>
                     </h2>
                     <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
-                            the collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            Bootstrap is used for creating responsive web and mobile applications whereas Tailwind CSS is used to create customized user interfaces. Tailwind CSS relies on utility classes, it can be more lightweight than other CSS frameworks.
                         </div>
                     </div>
                 </div>
@@ -467,17 +457,12 @@
                         <button class="accordion-button collapsed fw-semibold" type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
                             aria-controls="panelsStayOpen-collapseThree">
-                            Accordion Item #3
+                            What is the CSS box model?
                         </button>
                     </h2>
                     <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content. According to CSS, every element on the web page fits into a box. This is known as the CSS Box Model.
                         </div>
                     </div>
                 </div>
@@ -486,17 +471,12 @@
                         <button class="accordion-button collapsed fw-semibold" type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
                             aria-controls="panelsStayOpen-collapseFour">
-                            Accordion Item #4
+                            What is a semantic tag?
                         </button>
                     </h2>
                     <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            Semantic HTML tags are tags that define the meaning of the content they contain. For example, tags like "<strong> < header ></strong>", "<strong>< article ></strong>", and "<strong>< footer ></footer></strong>" are semantic HTML tags. They clearly describe their meaning to both the browser and the developer.
                         </div>
                     </div>
                 </div>
